7-cve-2023-27163/allow-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress
spec:
  podSelector: {}
  egress:
  - {}
  policyTypes:
  - Egress
